tests/type_safety/enum_non_exhaustive_match.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/type_safety/enum_non_exhaustive_match.rs:11:11
   |
11 |     match role {
   |           ^^^^ pattern `_` not covered
   |
note: `ChatRole` defined here
  --> src/types/chat.rs
   |
   | pub enum ChatRole {
   | ^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `ChatRole`
   = note: `ChatRole` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
13 ~         ChatRole::Assistant => "assistant response",
14 ~         _ => todo!(),
   |
